--- a/index.html
+++ b/index.html
@@ -100,27 +100,28 @@
         <div class="maps">
             <img src="./css/Arquivo Comprimido/map.png" alt="maps">
         </div>
-<div class="texto-rodape">
-        <div class="contatos-footer">
-            <p>LOVT - You love, your loft!</p>
-            <p>Broad St, Newark, NJ 07102 - USA</p>
-            <p>+1 (973) 854-555-548</p>
-            <p>contact@lovtrealstate.com</p>
+        <div class="texto-rodape">
+            <div class="contatos-footer">
+                <p>LOVT - You love, your loft!</p>
+                <p>Broad St, Newark, NJ 07102 - USA</p>
+                <p>+1 (973) 854-555-548</p>
+                <p>contact@lovtrealstate.com</p>
+            </div>
+            <div class="social-medias">
+                <p>OUR SOCIAL MEDIAS:</p>
+                <ul>
+                    <li><a href="https://intagram.com"><img src="./css/Arquivo Comprimido/instagram.svg"
+                                alt="insta-icon"></a>
+                    </li>
+                    <li><a href="https://facebook.com"><img src="./css/Arquivo Comprimido/facebook.svg"
+                                alt="face-icon"></a>
+                    </li>
+                    <li><a href="https://whatsapp.com"><img src="./css/Arquivo Comprimido/whatsapp.svg"
+                                alt="whats-icon"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="social-medias">
-            <p>OUR SOCIAL MEDIAS:</p>
-            <ul>
-                <li><a href="https://intagram.com"><img src="./css/Arquivo Comprimido/instagram.svg"
-                            alt="insta-icon"></a>
-                </li>
-                <li><a href="https://facebook.com"><img src="./css/Arquivo Comprimido/facebook.svg" alt="face-icon"></a>
-                </li>
-                <li><a href="https://whatsapp.com"><img src="./css/Arquivo Comprimido/whatsapp.svg"
-                            alt="whats-icon"></a>
-                </li>
-            </ul>
-        </div>
-    </div>
     </article>
 
 </footer>
